Fix: inner & outer circle alignment

--- a/src/pages/MyGoalsPage/MyGoalsPage.scss
+++ b/src/pages/MyGoalsPage/MyGoalsPage.scss
@@ -80,8 +80,8 @@
   height: 22px;
   border-radius: 50%;
   position: absolute;
-  top: 4px;
-  left: 4px;
+  top: 3.5px;
+  left: 3.5px;
 }
 
 .goal-dd-outer {
